--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^2.2.0"
   }
 }
